HTML: - fixed attribution display - changed row heights from explicit to fr units - ensured all font-sizes in rem - corrected headings (only 1 <h1>) - surrounded price with <p> - changed sign up to an anchor rather than a button CSS: - larger screen grid cols now determined by fr rather than explicit - corner radius added at componet level w overflow hidden - added color to the 2nd row background

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ select {
 
 :root {
     --cyan: hsl(179, 62%, 43%);
+    --darker-cyan: hsl(165, 52%, 36%);
     --bright-yellow: hsl(71, 73%, 54%);
     --light-gray: hsl(204, 43%, 93%);
     --gray-blue: hsl(218, 22%, 67%);
@@ -88,6 +89,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background-color: var(--light-gray);
     
     font-size: 16px;
@@ -97,9 +99,10 @@ body {
 main {
     display: grid;
     grid-template-columns: 22rem;
-    grid-template-rows: repeat(3, 16em);
+    grid-template-rows: repeat(3, 1fr);
     max-width: 22rem;
-    
+    border-radius: .5em;
+    overflow: hidden;
 }
 
 /* styles for the first row of the mobile layout */
@@ -110,16 +113,14 @@ main {
   flex-direction: column;
   justify-content: space-between;
   padding: 1.5em;
-  border-top-left-radius: .5em;
-  border-top-right-radius: .5em;
 }
 
-.row-1 h2 {
+.row-1 h1 {
   font-size: 1.5rem;
   color: var(--cyan);
 }
 
-.row-1 h3 {
+.row-1 h2 {
   font-size: 1.3rem;
   color: var(--bright-yellow);
 }
@@ -132,7 +133,7 @@ main {
 /* styles for the second row */
 
 .row-2 {
-  background-color: var(--cyan);
+  background-color: var(--darker-cyan);
   color: white;
   padding: 1.5em;
   display: flex;
@@ -167,23 +168,22 @@ main {
   font-size: 1.1rem;
 }
 
-.row-2 button {
+.row-2 a {
   background-color: var(--bright-yellow);
   border-radius: .4em;
-  padding: 1rem 0;
+  padding: 1em 2em;
   color: white;
   font-size: 1.2rem;
   /* has a small box shadow */
   box-shadow: 0 1rem 1rem -.2rem var();
   border: none;
+  text-align: center;
 }
 
 .row-3 {
   background-color: var(--cyan);
   color: white;
   padding: 1.5em;
-  border-bottom-left-radius: .5em;
-  border-bottom-right-radius: .5em;
 }
 
 .row-3 h2 {
@@ -201,10 +201,9 @@ main {
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: .8rem;
   text-align: center;
-  position: absolute;
-  bottom: 0;
+  right: 0;
   padding: 1em;
 }
 
@@ -218,7 +217,7 @@ main {
   
   main {
     max-width: 50rem;
-    grid-template-columns: repeat(2, 25rem); 
+    grid-template-columns: repeat(2, 1fr); 
     grid-template-rows: repeat(2, 16rem);
   }
 
@@ -238,15 +237,7 @@ main {
   .row-1 p {
     font-size: 1.2rem;
   }
-
-  .row-3 {
-    border-bottom-left-radius: 0;
-  }
-
-  .row-2 {
-    border-bottom-left-radius: .5em;
-  }
-
+  
 }
 
 
